# librwfile

./: CMakeLists.txt
includes/: rwfile.h
list/: list_add_end.c  list_create.c
read_file/: line_lst_work.c  read_all_file.c  read_line.c  read_many_files.c
